--- a/HTML_Javascript/실습 4.md
+++ b/HTML_Javascript/실습 4.md
@@ -1,1 +1,6 @@
+### SAPUI5 계산기(Select + Input) 실습
+- 두 숫자와 연산기호(+, -, ×, ÷)를 선택해 계산 결과를 MessageBox와 MessageToast로 출력하는 SAPUI5 계산기 기능을 개발함.
 
+<img width="1897" height="914" alt="image" src="https://github.com/user-attachments/assets/77b1411c-e821-4e85-8cd1-70d01f59c36a" />
+
+<img width="668" height="331" alt="image" src="https://github.com/user-attachments/assets/1f5af5c7-fd0f-49cd-902d-eafbef32406d" />
