--- a/HTML_Javascript/실습 4.md
+++ b/HTML_Javascript/실습 4.md
@@ -5,3 +5,95 @@
 
 <img width="555" height="275" alt="image" src="https://github.com/user-attachments/assets/05897ccb-2278-462c-8464-75c462f7c295" />
 
+</br>
+</br>
+</br>
+
+- Main.view.xml
+```html
+<mvc:View controllerName="ycl2project04.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <FlexBox justifyContent="Center" alignItems="Center">
+            <VBox width="30%" class="sapUiSmallMargin">
+                <Input id="idNumber1" width="100%" />
+                <Select 
+                    id="idselect" 
+                    items="{select>/calcDatas}"
+                    width="100%" 
+                    showSecondaryValues="true">
+                    <core:ListItem 
+                        key="{select>key}" 
+                        text="{select>text}" 
+                        additionalText="{select>key}"/>
+                </Select>
+                <Input id="idNumber2" width="100%" />
+                <Button text="계산하기" press="onCalc"
+                        width="100%" type="Emphasized" />
+            </VBox>
+        </FlexBox>
+    </Page>
+</mvc:View>
+```
+</br>
+
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/m/MessageBox",
+    "sap/m/MessageToast",
+    "sap/ui/model/json/JSONModel"
+], (Controller, MessageBox, MessageToast, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("ycl2project04.controller.Main", {
+        onInit() {
+        let oData = { 
+                calcDatas : [ 
+                    { key : "PLUS", text : "+"},
+                    { key : "MINUS", text : "-"},
+                    { key : "MULTIPL", text : "*"},
+                    { key : "DIVIDE", text : "/"}
+                ]
+            };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel, "select");
+        },
+        onCalc: function() {
+            // this.getView() 에서 .getView() 생략 가능! (버전업)
+            //let oSelect = this.byId("idSelect");  oSelect = {bAllowTextSelection: true};
+
+            let Number1 = Number(this.byId("idNumber1").getValue());
+            let Number2 = Number(this.byId("idNumber2").getValue());
+
+            let oSelect = this.byId("idselect").getSelectedItem().getKey();
+
+            if(oSelect === "PLUS") {
+                MessageBox.show(String(Number1+Number2));
+                MessageToast.show(Number1+Number2);
+            }
+            else if(oSelect === "MINUS") {
+                MessageBox.show(String(Number1-Number2));
+                MessageToast.show(Number1-Number2);
+            }
+            else if(oSelect == "MULTIPL") {
+                MessageBox.show(String(Number1*Number2));
+                MessageToast.show(Number1*Number2);
+            }
+            else if(oSelect === "DIVIDE") {
+                MessageBox.show(String(Number1/Number2));
+                MessageToast.show(Number1/Number2);
+            }
+
+            //debugger;       
+            // break-point 라고 부름. 로직 실행중 debugger를 만나면
+            // 디버깅이 걸려서 해당 구간에서 멈춰서 진행사항을 확인할 수 있다 (=디버깅이 걸렸다고 표현)
+            // debugger를 동작시키기 위해선 개발자도구(F12)가 켜진 상태여야함
+
+        }
+    });
+});
+```
