--- a/HTML_Javascript/실습 4.md
+++ b/HTML_Javascript/실습 4.md
@@ -1,5 +1,13 @@
 ### SAPUI5 계산기(Select + Input) 실습
 - 두 숫자와 연산기호(+, -, ×, ÷)를 선택해 계산 결과를 MessageBox와 MessageToast로 출력하는 SAPUI5 계산기 기능을 개발함.
+</br>
+
+- 중요 : Select나 List에서 items="{select>/calcDatas}" 이런 식으로 바인딩하려면, 꼭 객체 안에 '배열 형태의 데이터'가 필요
+- ```html
+  <Select items="{modelName>/someArray}">
+  ```
+- 이런 형태로 바인딩할 때, someArray는 반드시 배열(Array)이어야 함
+</br>
 
 <img width="756" height="367" alt="image" src="https://github.com/user-attachments/assets/84219be8-d79c-465b-9763-cb68a6676cb8" />
 
