--- a/HTML_Javascript/실습 6.md
+++ b/HTML_Javascript/실습 6.md
@@ -1,1 +1,5 @@
+### SAPUI5 테이블 바인딩 실습 (m.Table + grid Table)
+- 로컬 JSONModel의 persons 배열을 두 종류 테이블(sap.m.Table, sap.ui.table.Table)에 바인딩해 이름/나이/전화 표시, m.Table에서는 나이 필드 편집 가능(Input)
+
+<img width="940" height="401" alt="image" src="https://github.com/user-attachments/assets/0793783f-1e78-46c9-b40f-1bb190e3f184" />
 
