--- a/HTML_Javascript/실습 7.md
+++ b/HTML_Javascript/실습 7.md
@@ -1,1 +1,9 @@
+### Fragment + JSONModel 데이터 조회용 팝업 실습 (값 수정 불가 버전)
+- 메인 View에 JSONModel 데이터를 표시하고, 버튼 클릭 시 Fragment로 Dialog를 동적으로 로드하여 "dialog" 모델 데이터를 팝업 입력창에 표시만 가능하도록 구현한 데이터 조회용 팝업
+- 아직 값 수정되게 안띄워짐 (현재 팝업만 띄움)
+
+<img width="584" height="229" alt="image" src="https://github.com/user-attachments/assets/66bed29a-8778-4e9e-b509-19e13fa8ed1c" />
+
+<img width="777" height="362" alt="image" src="https://github.com/user-attachments/assets/50fc6f43-3190-4351-a754-9b22e58058fc" />
+
 
