--- a/HTML_Javascript/실습 7.md
+++ b/HTML_Javascript/실습 7.md
@@ -1,9 +1,121 @@
 ### Fragment + JSONModel 데이터 조회용 팝업 실습 (값 수정 불가 버전)
 - 메인 View에 JSONModel 데이터를 표시하고, 버튼 클릭 시 Fragment로 Dialog를 동적으로 로드하여 "dialog" 모델 데이터를 팝업 입력창에 표시만 가능하도록 구현한 데이터 조회용 팝업
 - 아직 값 수정되게 안띄워짐 (현재 팝업만 띄움)
+</br>
 
 <img width="584" height="229" alt="image" src="https://github.com/user-attachments/assets/66bed29a-8778-4e9e-b509-19e13fa8ed1c" />
 
 <img width="777" height="362" alt="image" src="https://github.com/user-attachments/assets/50fc6f43-3190-4351-a754-9b22e58058fc" />
 
+</br>
+</br>
+</br>
 
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment"
+], (Controller, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("ycl2project07.controller.Main", {
+        onInit() {
+            let oData = {
+                name : {
+                    firstName : "Hong",
+                    lastName : "Gildong"
+                },
+                inpvalue : "hihi"
+            };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel);
+
+            this.getView().setModel(new JSONModel({
+                inputValue1: "1",
+                inputValue2: "2",
+                inputValue3: "3"
+            }), "dialog");
+        },
+        onPress() {
+            let omodel = this.getView().getModel("dialog");
+            let oDialog = sap.ui.getCore().byId("idDialog");
+
+            if(oDialog) {
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "ycl2project07.view.fragment.DataChange",
+                    type: "XML",
+                    controller: this
+                }).then(function(diolog) {
+                    this.getView().setModel(diolog, "diolog");
+                    diolog.open();
+                })
+            }
+        },
+        onClose: function() {
+            sap.ui.getCore().byId("idDialog").close();
+        }
+    });
+});
+```
+</br>
+
+- Main.view.xml
+```html
+<mvc:View controllerName="ycl2project07.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <VBox>
+            <Text text="{/name/firstName}" />
+            <Text text="{/name/lastName}" />
+            <Text text="{/inpvalue}" />
+            <Button text="값 변경" press="onPress" />
+        </VBox>
+    </Page>
+</mvc:View>
+```
+</br>
+
+- DataChange.fragment.xml
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:c="sap.ui.core"
+    xmlns:f="sap.ui.layout.form">
+    <Dialog id="idDialog"
+            title="First Dialog"
+            contentHeight="40%"
+            contentWidth="20%"
+            draggable="true"
+            resizable="true">
+        <content>
+            <!-- Dialog 안에 들어갈 내용 작성 -->
+            <Text text="팝업 띄우기 완료!" />
+
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="First Name" />
+                    <Input value="{dialog>inputValue1}" />
+                    <Label text="Last Name" />
+                    <Input value="{dialog>/inputValue2}" />
+                    <Label text="input Value" />
+                    <Input value="{dialog>/inputValue3}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="OK" press=".onDialogOKPress" type="Emphasized" />
+            <Button text="close" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
