--- a/HTML_Javascript/실습 7.md
+++ b/HTML_Javascript/실습 7.md
@@ -82,7 +82,7 @@ sap.ui.define([
 ```
 </br>
 
-- DataChange.fragment.xml
+- fragment/DataChange.fragment.xml
 ```html
 <c:FragmentDefinition 
     xmlns="sap.m" 
