--- a/HTML_Javascript/실습 8.md
+++ b/HTML_Javascript/실습 8.md
@@ -1,1 +1,5 @@
+<img width="484" height="244" alt="image" src="https://github.com/user-attachments/assets/43eda45a-d6de-415d-8756-4cff4dc8dbc2" />
 
+<img width="733" height="371" alt="image" src="https://github.com/user-attachments/assets/6336758d-7e9b-45d0-86a9-a2d3b72e5535" />
+
+<img width="486" height="242" alt="image" src="https://github.com/user-attachments/assets/189caf3a-2ffe-4368-a4bc-bd56bca3793d" />
