--- a/HTML_Javascript/실습 8.md
+++ b/HTML_Javascript/실습 8.md
@@ -1,3 +1,7 @@
+### Dialog 편집값을 메인 모델에 반영하는 바인딩/복사 실습
+- 메인 View는 local JSONModel을 표시하고, 버튼 클릭 시 Dialog를 열어 같은 모델을 "dialog"로 붙여 입력값을 수정한 뒤 OK 버튼에서 수정값을 메인 필드(/name/*, /inpValue)로 복사 반영하는 예제임
+</br>
+
 <img width="322" height="163" alt="image" src="https://github.com/user-attachments/assets/f930dbe9-4bb0-4320-879a-40134828a31b" />
 </br>
 
