--- a/HTML_Javascript/실습 8.md
+++ b/HTML_Javascript/실습 8.md
@@ -9,3 +9,157 @@
 </br>
 
 <img width="335" height="167" alt="image" src="https://github.com/user-attachments/assets/8fd7d99a-2f26-444b-9b1b-b6a8ae380561" />
+
+</br>
+</br>
+</br>
+
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment"
+], (Controller, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("ycl2project081.controller.Main", {
+        onInit() {
+            let oData = {
+                name : {
+                    firstName : "Hong",
+                    lastName : "Gildong"
+                },
+                inpValue : "hihi",
+                dialogFirstName : "1",
+                dialogLastName : "2",
+                dialogInputValue : "3"
+            };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel, "local");
+        },
+        onPress: function() {
+            // function 안에서 선언한 변수들은 function 종료 시 사라짐
+            // this.oModel = this.getView().getModel("local");
+            /*
+                controller도 객체 {}
+                객체.newValue = "값";   // {newValue : "값"}
+                this.oModel = "값";     // controller {oModel : "값"}
+            */
+
+            let oModel = this.getView().getModel("local");
+            let oDialog = sap.ui.getCore().byId("idDialog");
+
+            if(oDialog) {
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "ycl2project081.view.fragment.Dialog",
+                    type: "XML",
+                    controller: this
+                }).then( function(mDialog) {
+                    mDialog.setModel(oModel, "dialog");
+                    mDialog.open();
+                })
+            }
+        },
+        onClose: function() {
+            sap.ui.getCore().byId("idDialog").close();
+        },
+        onDialogOKPress: function() {
+            let oDialogModel = sap.ui.getCore().byId("idDialog").getModel("dialog");
+            let oModel = this.getView().getModel("local");
+
+            // 모델이 가지고 있는 전체 데이터 조회 .getData()
+            // 모델이 가지고 있는 데이터를 경로를 통해 조회 .getProperty("/")
+            let aDialogaDatas = oDialogModel.getData();
+            let aDatas = oModel.getData();
+
+            let data1 = oDialogModel.getProperty("/dialogFirstName");
+            let data2 = oModel.getProperty("/name/firstName");
+
+            // 모델이 가지는 전체 데이터 세팅 .setData(변경할 데이터, 합치지여부)
+            // 모델이 가지는 데이터를 경로를 통해 세팅 .srtProperty("/변경대상경로", 변경할 값)
+
+            // oModel.setData({                
+            //     name : {
+            //         firstName : "11111",
+            //         lastName : "22222"
+            //     },
+            //     inpValue : "33333"
+            // }, true)    // 두번째 파라미터에 Merge 여부를 지정할 수 있음. true / false
+            //             // true 입력 시 Merger (기존 데이터에 변경사항만 적용)
+
+            // oModel.setProperty("/name/firstName", "55555");
+            // oModel.setProperty("/", {inpvaild : "test"});
+
+            oModel.setProperty("/name/firstName", oModel.getProperty("/dialogFirstName"));
+            oModel.setProperty("/name/lastName", oModel.getProperty("/dialogLastName"));
+            oModel.setProperty("/inpValue", oModel.getProperty("/dialogInputValue"));
+
+            let allDatas = oModel.getData();
+            allDatas.name.firstName = allDatas.dialogFirstName;
+            allDatas.name.lastName = allDatas.dialogLastName;
+            allDatas.inpValue = allDatas.dialogInputValue;
+            oModel.setData(allDatas, true);
+
+            this.onClose(); // controller에 만들어놓은 onClasse 함수 실행
+        }
+    });
+});
+```
+</br>
+
+- Main.view.xml
+```html
+<mvc:View controllerName="ycl2project081.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <VBox>
+            <Text text="{local>/name/firstName}" />
+            <Text text="{local>/name/lastName}" />
+            <Text text="{local>/inpValue}" />
+            <Button text="값 변경" press="onPress"/>
+        </VBox>
+    </Page>
+</mvc:View>
+```
+</br>
+
+- fragment/Dialog.fragment.xml
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" xmlns:c="sap.ui.core"
+    xmlns:f="sap.ui.layout.form">
+    <Dialog id="idDialog"
+            title="First Dialog"
+            contentHeight="40%"
+            contentWidth="20%"
+            draggable="true"
+            resizable="true">
+        <content>
+            <!-- Dialog 안에 들어갈 내용 작성 -->
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="First Name" />
+                    <Input value="{dialog>/dialogFirstName}" />
+                    <Label text="Last Name" />
+                    <Input value="{dialog>/dialogLastName}" />
+                    <Label text="input Value" />
+                    <Input value="{dialog>/dialogInputValue}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="OK" press=".onDialogOKPress" type="Emphasized"/>
+            <Button text="close" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
