--- a/HTML_Javascript/실습 9.md
+++ b/HTML_Javascript/실습 9.md
@@ -1,1 +1,7 @@
+### JSON 로드 + 바인딩 + 포맷터 + 마스터-디테일 테이블 실습
+- 고객 정보를 담은 JSON 파일을 불러와 테이블로 보여주고, 고객을 선택하면 해당 고객의 예약 목록이 아래 테이블에 표시되며, 나이별 구분·조건부 버튼·남은 좌석 상태를 계산해주는 데이터 연동·바인딩 실습
+</br>
 
+<img width="781" height="279" alt="image" src="https://github.com/user-attachments/assets/5fcd345e-e65d-4d94-b76d-ab3c74f1baff" />
+
+<img width="779" height="339" alt="image" src="https://github.com/user-attachments/assets/eb76136f-3af3-4b79-a22b-6098bf300ed3" />
