--- a/HTML_Javascript/실습 9.md
+++ b/HTML_Javascript/실습 9.md
@@ -39,5 +39,73 @@
 </br>
 
 - Main2.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment"
+], (Controller, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("ycl2project082.controller.Main2", {
+        fnFormatter: function(sValue) {
+            let result;
+            // formatter 사용시 if문으로 value가 있는 경우를 체크하여
+            // 처리하는게 좋다. value 값만 들어오는게 아니기 때문
+            if(sValue) {    
+                let oModel = this.getView().getModel("customer");
+
+                if(sValue >= 20) result = "성인";
+                else if(sValue >= 17 && sValue < 19) result = "중학생";
+                else if(sValue >= 14 && sValue < 17) result = "초등학생";
+                else if(sValue >= 8 && sValue < 14) result = "초등학생";
+                else result = "아동";
+                return result;
+            }
+        },
+        onInit() {
+            let oModel = new JSONModel();
+            oModel.loadData(sap.ui.require.toUrl("ycl2project082/model/data.json"));
+            this.getView().setModel(oModel, "main");
+
+            // this.byId("idVBox").bindElement("/company");    // 이름없는 기본모델
+            this.byId("idVBox").bindElement({
+                path : "/company",
+                model : "main"
+            });
+
+            let cModel = new JSONModel();
+            cModel.loadData(sap.ui.require.toUrl("ycl2project082/model/Customers.json"));
+            this.getView().setModel(cModel, "customer");
+        },
+        onPress: function(oEvent) {
+            // oEvent.getSource() : 버튼객체
+            let oRow = oEvent.getSource().getParent();
+            // oRow : 버튼 객체의 위에 있는 UI control (listItem 또는 Row)을 가져옴
+            let oBindingContext = oRow.getBindingContext("customer");   // 유재석 Row에 바인딩된 전체정보 가져온 것
+            // oBindingContext : 바인딩 객체. 내부에 모델정보, 현재 경로 등이 있음
+            let sPath = oBindingContext.getPath();
+            // 전체 바인딩 정보 중, 경로만 특정해서 가져옴
+            let oModel = this.getView().getModel("customer");
+            let oData = oModel.getProperty(sPath);  
+            // 모델 경로를 통해 가져온 모델 객체(유재석)
+            // 따라서 oData.PhoneNumber로 접근하면 특정 데이터를 얻을 수 있음
+            sap.m.MessageToast.show(oData.PhoneNumber);
+        },
+        // sap.m.Table 에서 Row 데이터 선택시 실행하는 이벤트(selectionChange)
+        onSelectionChange: function(oEvent) {
+            // 이벤트 함수는 이벤트 객체가 파라미터로 들어온다
+            // 이벤트 객체는 이벤트마다 다르다
+            // .getSource : 이벤트를 일으킨 객체
+            // .getParameters : 이벤트에 들어있는 파라미터 정보 (요게 다름)
+            let oBindingContext = oEvent.getParameters().listItem.getBindingContext("customer");
+            let sPath = oBindingContext.getPath();  // 현재 선택한 Item의 모델 경로
+
+            this.byId("idBookings").setBindingContext(oBindingContext, "customer");
+        }
+    });
+});
+```
+</br>
 
 - Main2.view.xml
